--- a/src/gallery-pathogen-encoder/tests/unit/index.html
+++ b/src/gallery-pathogen-encoder/tests/unit/index.html
@@ -4,8 +4,6 @@
 
 <title>Pathogen Encoder Automated Tests</title>
 
-<link rel="stylesheet" href="http://yui.yahooapis.com/combo?3.11.0/widget-base/assets/skins/sam/widget-base.css&3.11.0/console/assets/skins/sam/console.css&3.11.0/console-filters/assets/skins/sam/console-filters.css&3.11.0/test-console/assets/skins/sam/test-console.css">
-
 <script src="../../node_modules/yui/yui/yui.js"></script>
 <script src="../../src/pathogen-encoder/js/pathogen-encoder.js"></script>
 
@@ -15,15 +13,11 @@
 
 <div id="log"></div>
 
-<!-- Load the required modules normally -->
-<script>
-YUI().use('test-console', 'test');
-</script>
-
 <script>
 YUI.Env.core.push('gallery-pathogen-encoder');
 YUI({
-    customComboBase: 'http://admin1.staging.cx.gq1.yahoo.com/cc/',
+    combine: true,
+    gallery: 'gallery-2013.08.07-20-34',
     modules: {
         'pathogen-encoder-tests': {
             fullpath: './assets/pathogen-encoder-tests.js',
