--- a/src/gallery-pathogen-encoder/tests/unit/index.html
+++ b/src/gallery-pathogen-encoder/tests/unit/index.html
@@ -5,7 +5,7 @@
 <title>Pathogen Encoder Automated Tests</title>
 
 <script src="../../node_modules/yui/yui/yui.js"></script>
-<script src="../../src/pathogen-encoder/js/pathogen-encoder.js"></script>
+<script src="../../js/pathogen-encoder.js"></script>
 
 </head>
 
